--- a/src/view/JDlgVendas.form
+++ b/src/view/JDlgVendas.form
@@ -31,7 +31,7 @@
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="joa_jBtnIncluir1" min="-2" max="-2" attributes="0"/>
-                          <Component id="joa_jBtbExcluir1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="joa_jBtnExcluir1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="joa_jBtnAlterar1" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -125,7 +125,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="joa_jBtnAlterar1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="joa_jBtbExcluir1" min="-2" max="-2" attributes="0"/>
+                      <Component id="joa_jBtnExcluir1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -310,14 +310,14 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="joa_jBtbExcluir1">
+    <Component class="javax.swing.JButton" name="joa_jBtnExcluir1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/imagens/Excluir.png"/>
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="joa_jBtbExcluir1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="joa_jBtnExcluir1ActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="joa_jBtnAlterar1">
